# nvd-severity

./: .dockerignore  .env.example  .gitignore  CI.md  CVE-1999-0001.json  CVE-1999-0004.json  CVE-1999-0012.json  CVE-1999-0013.json  CVE-1999-0016.json  CVE-1999-0020.json  CVE-1999-0023.json  CVE-1999-0031.json  CVE-1999-0034.json  CVE-1999-0038.json  CVE-1999-0040.json  CVE-1999-0041.json  CVE-1999-0049.json  CVE-1999-0051.json  CVE-1999-0052.json  CVE-1999-0053.json  CVE-1999-0055.json  CVE-1999-0056.json  CVE-1999-0065.json  CVE-1999-0069.json  CVE-1999-0073.json  CVE-1999-0075.json  CVE-1999-0076.json  CVE-1999-0077.json  CVE-1999-0081.json  CVE-1999-0084.json  CVE-1999-0085.json  CVE-1999-0088.json  CVE-1999-0090.json  CVE-1999-0092.json  CVE-1999-0095.json  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nvd_severity/: __main__.py  git.py  log.py  main.py  mapper.py  nvd.py
tests/: test_mapper.py
vulnerabilities/: CVE-1999-0001.json  CVE-1999-0002.json  CVE-1999-0003.json  CVE-1999-0004.json  CVE-1999-0005.json  CVE-1999-0006.json  CVE-1999-0007.json  CVE-1999-0008.json  CVE-1999-0009.json  CVE-1999-0010.json  CVE-1999-0011.json  CVE-1999-0012.json  CVE-1999-0013.json  CVE-1999-0014.json  CVE-1999-0015.json  CVE-1999-0016.json  CVE-1999-0017.json  CVE-1999-0018.json  CVE-1999-0019.json  CVE-1999-0020.json  CVE-1999-0021.json  CVE-1999-0022.json  CVE-1999-0023.json  CVE-1999-0024.json  CVE-1999-0025.json  CVE-1999-0026.json  CVE-1999-0027.json  CVE-1999-0028.json  CVE-1999-0029.json  CVE-1999-0030.json  CVE-1999-0031.json  CVE-1999-0032.json  (+345393 more)
(+3 files in other folders)
